fix: Personal info page spacing

--- a/client/components/styles/EditPassword.module.scss
+++ b/client/components/styles/EditPassword.module.scss
@@ -78,11 +78,41 @@
 
 
 @media (max-width: 950px) {
-    .edit-item > :nth-child(1) {
-        width: 30%;
-    }
-
-    .edit-item > :nth-child(2) {
-        width: 60%;
-    }
+  .edit-item > :nth-child(1) {
+    width: 30%;
   }
+
+  .edit-item > :nth-child(2) {
+    width: 60%;
+  }
+}
+
+.personal_container {
+  display: flex;
+  gap: 30px;
+  margin-left: 50px;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  flex: 1;
+}
+
+.graphics_container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.fields_container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  flex: 1;
+}
+
+// media query for less than 400px
+@media (max-width: 400px) {
+  .personal_container {
+    gap: 15px;
+    margin-left: 0px;
+  }
+}
